--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0,viewport-fit=cover" />
     <title>Vite App</title>
-    <script src="https://cdn.bootcss.com/eruda/1.5.8/eruda.min.js"></script>
+<!--    <script src="https://cdn.bootcss.com/eruda/1.5.8/eruda.min.js"></script>-->
   </head>
 
   <body>
