--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0,viewport-fit=cover" />
-    <title>Vite App</title>
-<!--    <script src="https://cdn.bootcss.com/eruda/1.5.8/eruda.min.js"></script>-->
+    <title>移动端项目模板</title>
   </head>
 
   <body>
-    <div id="app"></div>
+    <div id="app" class="root-class"></div>
     <script type="module" src="/src/main.ts"></script>
     <script>
-      // eruda.init();
       document.addEventListener('touchstart', function (event) {
         if (event.touches.length > 1) {
           event.preventDefault();
